@@ -1,4 +1,5 @@
-% Generated by roxygen2 (4.0.2): do not edit by hand
+% Generated by roxygen2 (4.1.0): do not edit by hand
+% Please edit documentation in R/Deprecated.R, R/hash.R
 \name{\%l*\%}
 \alias{\%ha\%}
 \alias{\%l*\%}
