@@ -1,4 +1,5 @@
-% Generated by roxygen2 (4.0.2): do not edit by hand
+% Generated by roxygen2 (4.1.0): do not edit by hand
+% Please edit documentation in R/repo2github.R
 \name{repo2github}
 \alias{repo2github}
 \title{Upload a Local Repo to GitHub}
